# HW_31

./: README.md  ReadME.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/urls/: ad.py  cat.py  selections.py
data/: ads.json  categories.json  csv_to_json.py  locations.json  users.json
homework27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
