[tool.poetry]
name = "homework27"
version = "0.1.0"
description = ""
authors = ["donkey4hot <tractorist666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
